--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
         </section>
         <footer class="footer">
           <div class="year">2021 ©</div>
-          <div class="developed">Develop by Snypi</div>
+          <div class="developed">Developed by Snypi</div>
         </footer>
       </div>
     </main>
