--- a/index.html
+++ b/index.html
@@ -52,15 +52,12 @@
         </section>
       </div>
 
-      <div class="black-content">
-        <ul class="list-menu">
+      <div class="black-content toggler-padding">
+        <!-- <ul class="list-menu">
           <li class="menu-title">MENU</li>
           <li class="main-text-menu first-menu">
             <a href="#" id="first-link" class="colorChange active new-toggle">
               <i class="fas fa-home"></i>Dashboards
-              <!-- <i
-                class="fas fa-angle-down"
-              ></i> -->
               <span class="menu-number">04</span></a
             >
             <ul id="click-menu">
@@ -72,9 +69,8 @@
           </li>
           <li class="main-text-menu">
             <a href="#" id="first-link" class="colorChange"
-              ><i class="fas fa-layer-group"></i>Layouts<i
-                class="fas fa-angle-down"
-              ></i
+              ><i class="fas fa-layer-group"></i><span>Layouts</span
+              ><i class="fas fa-angle-down"></i
             ></a>
             <ul id="click-menu">
               <li><a href="#">Vertical</a></li>
@@ -274,6 +270,19 @@
             <ul id="click-menu">
               <li><a href="#">Level 1.1</a></li>
               <li><a href="#">Level 1.2</a></li>
+            </ul>
+          </li>
+        </ul> -->
+
+        <ul class="list-menu-toggler">
+          <li class="menu-toggler-logo">
+            <i class="fas fa-home"></i>
+            <ul class="toggle-menu-hover">
+              <li class="active">Dashboards</li>
+              <li><a href="#">Default</a></li>
+              <li><a href="#">Saas</a></li>
+              <li><a href="#">Crypto</a></li>
+              <li><a href="#">Blog</a></li>
             </ul>
           </li>
         </ul>
