--- a/index.html
+++ b/index.html
@@ -65,10 +65,16 @@
 
         <section class="user-menu">
           <div class="user-menu_darkmode">
-            <label for="change-mode">
-              <input type="checkbox" id="change-mode" class="menu-darkmode" />
-              Dark Mode
-            </label>
+            <!-- <label for="change-mode"> -->
+            Dark Mode
+            <form action="#">
+              <div class="switch">
+                <input id="switch-1" type="checkbox" class="switch-input" />
+                <label for="switch-1" class="switch-label">Switch</label>
+              </div>
+            </form>
+
+            <!-- </label> -->
           </div>
           <img src="img/us.jpg" class="us-flag" />
           <button><i class="fab fa-intercom"></i></button>
@@ -593,7 +599,7 @@
               <img src="./img/profile-img.png" width="150px" />
             </div>
 
-            <div class="welcome-info">
+            <div class="welcome-info dark-mode-item">
               <div class="welcome-avatar">
                 <img src="img/avatar-1.jpg" width="70px" />
                 <h5>Henry Price</h5>
@@ -616,7 +622,7 @@
             </div>
           </article>
 
-          <article class="monthly-earnings">
+          <article class="monthly-earnings dark-mode-item">
             <h4>Monthly Earning</h4>
             <div class="earnings-graphics">
               <div class="earnings-month">
@@ -640,7 +646,7 @@
 
         <section class="graphics">
           <article class="graphics-stats">
-            <div class="stats-orders stat-fx">
+            <div class="stats-orders stat-fx dark-mode-item">
               <div class="orders-info">
                 <p>Orders</p>
                 <h4>1,235</h4>
@@ -650,7 +656,7 @@
                 <i class="fas fa-passport"></i>
               </div>
             </div>
-            <div class="stats-revenue stat-fx">
+            <div class="stats-revenue stat-fx dark-mode-item">
               <div class="orders-info">
                 <p>Revenue</p>
                 <h4>$35, 723</h4>
@@ -660,7 +666,7 @@
                 <i class="fas fa-cloud-download-alt"></i>
               </div>
             </div>
-            <div class="stats-Price stat-fx">
+            <div class="stats-Price stat-fx dark-mode-item">
               <div class="orders-info">
                 <p>Average Price</p>
                 <h4>$16.2</h4>
@@ -671,7 +677,7 @@
               </div>
             </div>
           </article>
-          <article class="graphics-emails">
+          <article class="graphics-emails dark-mode-item">
             <div class="emails-sent">
               <h4>Email Sent</h4>
               <ul>
@@ -684,7 +690,7 @@
           </article>
         </section>
 
-        <section class="social-activity">
+        <section class="social-activity dark-mode-item">
           <div class="social-activity-wraper">
             <h4>Social Source</h4>
             <div class="social-main-fb">
@@ -721,7 +727,7 @@
         </section>
 
         <secion class="activity-info">
-          <article class="activity-calendar">
+          <article class="activity-calendar dark-mode-item">
             <h4>Activity</h4>
             <div class="activity-calendar-dates">
               <i class="far fa-arrow-alt-circle-right"></i>
@@ -753,7 +759,7 @@
               View More <i class="fas fa-arrow-right"></i>
             </button>
           </article>
-          <article class="activity-stats">
+          <article class="activity-stats dark-mode-item">
             <h4>Top Cities Selling Product</h4>
             <div class="activity-stats_mark">
               <i class="fas fa-map-marked"></i>
@@ -788,7 +794,7 @@
           </article>
         </secion>
 
-        <section class="transactions">
+        <section class="transactions dark-mode-item">
           <h4>Latest Transaction</h4>
           <article class="transctions-list">
             <div class="list-header">
@@ -818,7 +824,7 @@
             </div> -->
           </article>
         </section>
-        <footer class="footer">
+        <footer class="footer dark-mode-item">
           <div class="year">2021 ©</div>
           <div class="developed">Developed by Snypi</div>
         </footer>
