--- a/index.html
+++ b/index.html
@@ -76,17 +76,152 @@
 
             <!-- </label> -->
           </div>
-          <img src="img/us.jpg" class="us-flag" />
-          <button><i class="fab fa-intercom"></i></button>
+          <div class="menu-flag click-menu">
+            <img src="img/us.jpg" class="us-flag" />
+            <div class="menu-flag-countrys menu-click-dropdown delete-item">
+              <ul class="language-list">
+                <li class="language-flag-list">
+                  <a><img src="./img/us.jpg" /><span>English</span></a>
+                </li>
+                <li class="language-flag-list">
+                  <a><img src="./img/spain-flag.jpg" /><span>Spanish</span></a>
+                </li>
+                <li class="language-flag-list">
+                  <a><img src="./img/germany-flag.jpg" /><span>German</span></a>
+                </li>
+                <li class="language-flag-list">
+                  <a><img src="./img/italy-flag.jpg" /><span>Italian</span></a>
+                </li>
+                <li class="language-flag-list">
+                  <a><img src="./img/russia-flag.jpg" /><span>Russian</span></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="menu-packet_list click-menu">
+            <button><i class="fab fa-intercom"></i></button>
+            <div class="menu-packets menu-click-dropdown delete-item">
+              <ul class="packet_list">
+                <li class="packet_list-item">
+                  <a><img src="./img/github.png" /><span>Github</span></a>
+                </li>
+                <li class="language-flag-list">
+                  <a><img src="./img/bitbucket.png" /><span>Bitbucket</span></a>
+                </li>
+                <li class="language-flag-list">
+                  <a><img src="./img/dribbble.png" /><span>Dribbble</span></a>
+                </li>
+                <li class="language-flag-list">
+                  <a><img src="./img/dropbox.png" /><span>Dropbox</span></a>
+                </li>
+                <li class="language-flag-list">
+                  <a
+                    ><img src="./img/mail_chimp.png" /><span
+                      >Mail Chimp</span
+                    ></a
+                  >
+                </li>
+                <li class="language-flag-list">
+                  <a><img src="./img/slack.png" /><span>Slack</span></a>
+                </li>
+              </ul>
+            </div>
+          </div>
           <button class="button-fulscreen">
             <i class="fas fa-expand open-fullscreen"></i>
             <i class="fas fa-compress close-fullscreen delete-item"></i>
           </button>
-          <button>
-            <i class="far fa-bell"><sup>3</sup></i>
-          </button>
-          <img src="img/avatar-1.jpg" class="avatar" />
-          <span>Henry <i class="fas fa-angle-down"></i> </span>
+          <div class="menu-notification click-menu">
+            <button>
+              <sup>3</sup>
+              <i class="far fa-bell"></i>
+            </button>
+            <div
+              class="menu-notification-dropdown menu-click-dropdown delete-item"
+            >
+              <div class="notifications-name">
+                <h6>Notifications</h6>
+                <a href="#">View All</a>
+              </div>
+              <div class="notifications-list">
+                <div class="notification-list-item">
+                  <span class="item-logo"
+                    ><i class="fas fa-shopping-cart"></i
+                  ></span>
+                  <div class="notification-info">
+                    <h6>Your order is placed</h6>
+                    <p>If several languages coalesce the grammar</p>
+                    <div>
+                      <i class="far fa-clock"></i><span>3 min ago</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="notification-list-item">
+                  <span class="item-logo item-logo-avatar"
+                    ><img src="img/avatar-3.jpg"
+                  /></span>
+                  <div class="notification-info">
+                    <h6>James Lemire</h6>
+                    <p>It will seem like simplified English.</p>
+                    <div>
+                      <i class="far fa-clock"></i><span>1 hour ago</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="notification-list-item">
+                  <span class="item-logo item-logo-green"
+                    ><i class="fas fa-certificate"></i
+                  ></span>
+                  <div class="notification-info">
+                    <h6>Your item is shipped</h6>
+                    <p>If several languages coalesce the</p>
+                  </div>
+                </div>
+                <a href="#" class="notification-link"
+                  ><i class="fas fa-arrow-circle-right"></i>View More..</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="menu-profile click-menu">
+            <img src="img/avatar-1.jpg" class="avatar" />
+            <span>Henry <i class="fas fa-angle-down"></i> </span>
+            <div class="menu-profile-dropdown menu-click-dropdown delete-item">
+              <div class="profile-dropdown-item">
+                <a href="#">
+                  <i class="far fa-user"></i>
+                  <span>Profile</span>
+                </a>
+              </div>
+              <div class="profile-dropdown-item">
+                <a href="#">
+                  <i class="fas fa-wallet"></i>
+                  <span>My Wallet</span>
+                </a>
+              </div>
+              <div class="profile-dropdown-item">
+                <a href="#">
+                  <i class="fas fa-wrench"></i>
+                  <span>Settings</span>
+                  <span class="profile-settings-number">11</span>
+                </a>
+              </div>
+              <div class="profile-dropdown-item">
+                <a href="#">
+                  <i class="fas fa-unlock-alt"></i>
+                  <span>Lock Screen</span>
+                </a>
+              </div>
+              <div class="profile-dropdown-item dopdown-logout">
+                <a href="#">
+                  <i class="fas fa-power-off"></i>
+                  <span>Logout</span>
+                </a>
+              </div>
+            </div>
+          </div>
           <button><i class="far fa-sun"></i></button>
         </section>
       </div>
