--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
     </section>
     <main class="main-items menu-change_big">
       <div class="black-navigation">
+        <img src="img/logo-light.svg" class="small-new-logo delete-item" />
         <span class="helper"
-          ><img src="img/logo-light.png" class="small-menu-logo"
-        /></span>
+          ><img src="img/logo-light.png" class="small-menu-logo" />
+        </span>
       </div>
 
       <div class="white-navigation">
@@ -724,7 +725,7 @@
           </div>
         </div>
 
-        <section class="earnings">
+        <section class="earnings mediafor">
           <article class="welcome">
             <div class="welcome-user">
               <div class="welcome-text">
@@ -779,7 +780,7 @@
           </article>
         </section>
 
-        <section class="graphics">
+        <section class="graphics mediafor">
           <article class="graphics-stats">
             <div class="stats-orders stat-fx dark-mode-item">
               <div class="orders-info">
@@ -825,7 +826,7 @@
           </article>
         </section>
 
-        <section class="social-activity dark-mode-item">
+        <section class="social-activity dark-mode-item mediafor">
           <div class="social-activity-wraper">
             <h4>Social Source</h4>
             <div class="social-main-fb">
@@ -861,7 +862,7 @@
           </div>
         </section>
 
-        <secion class="activity-info">
+        <secion class="activity-info mediafor">
           <article class="activity-calendar dark-mode-item">
             <h4>Activity</h4>
             <div class="activity-calendar-dates">
@@ -929,7 +930,7 @@
           </article>
         </secion>
 
-        <section class="transactions dark-mode-item">
+        <section class="transactions dark-mode-item mediafor">
           <h4>Latest Transaction</h4>
           <article class="transctions-list">
             <div class="list-header">
@@ -944,23 +945,11 @@
               <div>Patment Method</div>
               <div>View Details</div>
             </div>
-
-            <!-- <div class="transaction-list_item">
-              <div class="list-checkbox">
-                <input type="checkbox" />
-              </div>
-              <div class="list-id">Order Id</div>
-              <div class="list-billing">Billing Name</div>
-              <div class="list-date">Date</div>
-              <div class="list-total">Total</div>
-              <div class="list-status">Payment Status</div>
-              <div class="list-method">Patment Method</div>
-              <button class="list-button">View Details</button>
-            </div> -->
           </article>
         </section>
-        <footer class="footer dark-mode-item">
+        <footer class="footer dark-mode-item mediafor">
           <div class="year">2021 ©</div>
+
           <div class="developed">Developed by Snypi</div>
         </footer>
       </div>
