--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           </div>
           <div class="menu-profile click-menu">
             <img src="img/avatar-1.jpg" class="avatar" />
-            <span>Henry <i class="fas fa-angle-down"></i> </span>
+            <span class="profile-name">Henry <i class="fas fa-angle-down"></i> </span>
             <div class="menu-profile-dropdown menu-click-dropdown delete-item">
               <div class="profile-dropdown-item">
                 <a href="#">
